--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,15 @@
       "PrestaShop\\AccountsAuth\\": "src/"
     }
   },
-  "require": {}
+  "require": {
+    "symfony/dotenv": "^3.4",
+    "ext-json": "*",
+    "guzzlehttp/guzzle": "^6.5"
+  },
+  "require-dev": {
+    "php": ">=5.6",
+    "phpunit/phpunit": "^5.7",
+    "prestashop/php-dev-tools": "^2.2",
+    "friendsofphp/php-cs-fixer": "^2.16"
+  }
 }
