--- a/.github/workflows/accounts-qc-php.yml
+++ b/.github/workflows/accounts-qc-php.yml
@@ -40,6 +40,7 @@ jobs:
         with:
           path: ~/.composer/cache
           key: php-composer-cache
+      - run: apt update && apt install git
       - run: git clone git@github.com:PrestaShop/PrestaShop.git
       - run: cd PrestaShop && ls -la
       - run: composer install
