--- a/.github/workflows/accounts-qc-php.yml
+++ b/.github/workflows/accounts-qc-php.yml
@@ -40,14 +40,12 @@ jobs:
         with:
           path: ~/.composer/cache
           key: php-composer-cache
-      - name: Check out my other private repo
-        uses: actions/checkout@master
-        with:
-          repository: PrestaShop/PrestaShop
-      - run: cd PrestaShop && ls -la
-      - run: composer install
-      - run: ls -la
-      - run: composer install
+      - name: git clone
+        run: git clone git@github.com:PrestaShop/PrestaShop.git
+      - name: composer install ps_accounts
+        run: git clone git@github.com:PrestaShop/PrestaShop.git
+      - name: composer install ps_accounts
+        run: composer install && ls -la
       - name: Pull PrestaShop files (Tag ${{ matrix.presta-versions }})
         run: docker run -tid --rm -v ps-volume:/var/www/html --name temp-ps prestashop/prestashop:${{ matrix.presta-versions }}
       - name : Run PHPStan
