--- a/.github/workflows/accounts-qc-php.yml
+++ b/.github/workflows/accounts-qc-php.yml
@@ -41,9 +41,10 @@ jobs:
           path: ~/.composer/cache
           key: php-composer-cache
       - name: git clone
+        uses: actions/checkout@v2.0.0
         run: git clone git@github.com:PrestaShop/PrestaShop.git
       - name: composer install ps_accounts
-        run: git clone git@github.com:PrestaShop/PrestaShop.git
+        run: cd PrestaShop && composer install && ls -la
       - name: composer install ps_accounts
         run: composer install && ls -la
       - name: Pull PrestaShop files (Tag ${{ matrix.presta-versions }})
