--- a/.github/workflows/accounts-qc-php.yml
+++ b/.github/workflows/accounts-qc-php.yml
@@ -41,10 +41,10 @@ jobs:
           path: ~/.composer/cache
           key: php-composer-cache
       - name: git clone
-        uses: actions/checkout@v2.0.0
-        with:
-          repository: PrestaShop/PrestaShop
-          path: ps_accounts
+        uses: actions/checkout@v2
+        shell: bash
+        run: |
+          git clone git@github.com:PrestaShop/PrestaShop.git
       - name: composer install ps_accounts
         run: cd PrestaShop && composer install && ls -la
       - name: composer install ps_accounts
