--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^5.7",
-    "prestashop/php-dev-tools": "^2.2",
+    "prestashop/php-dev-tools": "3.*",
     "friendsofphp/php-cs-fixer": "^2.16"
   }
 }
