--- a/.github/workflows/accounts-qc-php.yml
+++ b/.github/workflows/accounts-qc-php.yml
@@ -1,5 +1,7 @@
 name: PHP tests
+
 on: [pull_request]
+
 jobs:
   php-linter:
     name: PHP Syntax check 5.6|7.2|7.3
@@ -41,7 +43,9 @@ jobs:
           path: ~/.composer/cache
           key: php-composer-cache
       - name: git clone ps_accounts
-        run: git clone https://${{ secrets.ACCESS_TOKEN }}@github.com/PrestaShopCorp/ps_accounts.git ~/ps_accounts
+        run: |
+          git clone https://${{ secrets.ACCESS_TOKEN }}@github.com/PrestaShopCorp/ps_accounts.git ~/ps_accounts
+          cd ~/ps_accounts && git checkout -b feature/790-extract-library-from-ps_accounts origin/feature/790-extract-library-from-ps_accounts
       - name: composer install
         run: composer install && cd ~/ps_accounts && composer install
       - name: Pull PrestaShop files (Tag ${{ matrix.presta-versions }})
