--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "php": ">=5.6",
     "symfony/dotenv": "^3.4",
     "ext-json": "*",
-    "guzzlehttp/guzzle": "^6.5"
+    "guzzlehttp/guzzle": "~5.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.7",
