--- a/tests/phpstan/phpstan-PS-1.6.neon
+++ b/tests/phpstan/phpstan-PS-1.6.neon
@@ -9,5 +9,7 @@ parameters:
 		- ../../src
 	dynamicConstantNames:
 		- _PS_VERSION_
+	ignoreErrors:
+		- '#Call to an undefined method Module::getContext().#'
 
 	level: 7
