--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -3,7 +3,7 @@
 $config = new PrestaShop\CodingStandards\CsFixer\Config();
 
 $config
-    ->setUsingCache(true)
+    ->setUsingCache(false)
     ->getFinder()
     ->in(__DIR__)
     ->exclude('vendor');
