--- a/tests/phpstan/phpstan-PS-1.7.neon
+++ b/tests/phpstan/phpstan-PS-1.7.neon
@@ -11,5 +11,7 @@ parameters:
 		- _PS_VERSION_
 	ignoreErrors:
 		- '#Call to an undefined method Module::getContext().#'
+		- '#Result of \|\| is always false.#'
+		- '#Strict comparison using === between false and string will always evaluate to false.#'
 
 	level: 7
