--- a/tests/phpstan/phpstan-PS-1.6.neon
+++ b/tests/phpstan/phpstan-PS-1.6.neon
@@ -14,6 +14,6 @@ parameters:
 		- '#Result of \|\| is always false.#'
 		- '#Strict comparison using === between false and string will always evaluate to false.#'
 		- '#Access to an undefined property Language::\$locale.#'
-
+		- '#Call to static method getInstance\(\) on an unknown class PrestaShop\\PrestaShop\\Adapter\\SymfonyContainer.#'
 
 	level: 7
