Fix phpstan issues

--- a/tests/phpstan/phpstan-PS-1.6.neon
+++ b/tests/phpstan/phpstan-PS-1.6.neon
@@ -15,8 +15,9 @@ parameters:
 		- '#Strict comparison using === between false and string will always evaluate to false.#'
 		- '#Access to an undefined property Language::\$locale.#'
 		- '#Call to static method getInstance\(\) on an unknown class PrestaShop\\PrestaShop\\Adapter\\SymfonyContainer.#'
+		- '#Call to static method getInstance\(\) on an unknown class PrestaShop\\PrestaShop\\Core\\Addon\\Module\\ModuleManagerBuilder.#'
 		- '#Call to method get\(\) on an unknown class Symfony\\Component\\DependencyInjection\\ContainerInterface.#'
 		- '#Property PrestaShop\\AccountsAuth\\Presenter\\PsAccountsPresenter::\$container has unknown class Symfony\\Component\\DependencyInjection\\ContainerInterface as its type.#'
 		- '#Method LinkCore::getAdminLink\(\) invoked with 4 parameters, 1-2 required.#'
-	
+
 	level: 7
