--- a/tests/phpstan/phpstan-PS-1.7.neon
+++ b/tests/phpstan/phpstan-PS-1.7.neon
@@ -14,5 +14,6 @@ parameters:
 		- '#Result of \|\| is always false.#'
 		- '#Strict comparison using === between false and string will always evaluate to false.#'
 		- '#Call to static method getInstance\(\) on an unknown class PrestaShop\\PrestaShop\\Adapter\\SymfonyContainer.#'
+		- '#Method LinkCore::getAdminLink\(\) invoked with 4 parameters, 1-2 required.#'
 
 	level: 7
