--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "php": ">=5.6",
     "symfony/dotenv": "^3.4",
     "ext-json": "*",
-    "guzzlehttp/guzzle": "~5.0"
+    "guzzlehttp/guzzle": "~5.0",
+    "lcobucci/jwt": "^3.3"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.7",
