--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "autoload": {
     "psr-4": {
       "PrestaShop\\AccountsAuth\\": "src/",
-      "Tests\\": "tests/"
+      "PrestaShop\\AccountsAuth\\Tests\\": "tests/"
     }
   },
   "require": {
@@ -13,7 +13,8 @@
     "symfony/dotenv": "^3.4",
     "ext-json": "*",
     "guzzlehttp/guzzle": "~5.0",
-    "lcobucci/jwt": "^3.3"
+    "lcobucci/jwt": "^3.3",
+    "phpseclib/phpseclib": "^2.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.7",
