--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,18 @@
   "license": "MIT",
   "autoload": {
     "psr-4": {
-      "PrestaShop\\AccountsAuth\\": "src/",
-      "PrestaShop\\AccountsAuth\\Tests\\": "tests/"
+      "PrestaShop\\AccountsAuth\\": "src/"
     }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "PrestaShop\\AccountsAuth\\Tests\\": "tests/"
+    },
+    "files": [
+      "tests/Mock/Module.php",
+      "tests/Mock/Context.php",
+      "tests/Mock/Link.php"
+    ]
   },
   "require": {
     "php": ">=5.6",
@@ -14,8 +23,7 @@
     "phpseclib/phpseclib": "^2.0",
     "ext-json": "*",
     "guzzlehttp/guzzle": "~5.0",
-    "lcobucci/jwt": "^3.3",
-    "phpseclib/phpseclib": "^2.0"
+    "lcobucci/jwt": "^3.3"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.7",
