--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,7 @@
   "autoload-dev": {
     "psr-4": {
       "PrestaShop\\AccountsAuth\\Tests\\": "tests/"
-    },
-    "files": [
-      "tests/Mock/Module.php",
-      "tests/Mock/Context.php",
-      "tests/Mock/Link.php"
-    ]
+    }
   },
   "require": {
     "php": ">=5.6",
@@ -27,7 +22,7 @@
     "sentry/sentry": "^1.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^5.7",
+    "phpunit/phpunit": "^5.7 <8",
     "prestashop/php-dev-tools": "3.*",
     "friendsofphp/php-cs-fixer": "^2.16",
     "fzaninotto/faker": "^1.9",
