--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "sentry/sentry": "^1.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^5.7",
+    "phpunit/phpunit": "^5.7,<8",
     "prestashop/php-dev-tools": "3.*",
     "friendsofphp/php-cs-fixer": "^2.16",
     "fzaninotto/faker": "^1.9",
