--- a/composer.json
+++ b/composer.json
@@ -22,10 +22,9 @@
     "sentry/sentry": "^1.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^5.7,<8",
+    "phpunit/phpunit": "^5.7",
     "prestashop/php-dev-tools": "3.*",
     "friendsofphp/php-cs-fixer": "^2.16",
-    "fzaninotto/faker": "^1.9",
-    "mockery/mockery": "^1.3"
+    "fzaninotto/faker": "^1.9"
   }
 }
