--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     }
   },
   "require": {
-    "php": ">=5.6 <8",
+    "php": ">=5.6",
     "symfony/dotenv": "^3.4",
     "phpseclib/phpseclib": "^2.0",
     "ext-json": "*",
