cs-fixer ignore test dir

--- a/.github/workflows/accounts-qc-php.yml
+++ b/.github/workflows/accounts-qc-php.yml
@@ -1,6 +1,9 @@
 name: Accounts Quality Control PHP
 
-on: [pull_request]
+on:
+  pull_request:
+    paths-ignore:
+      - 'tests/**'
 
 jobs:
   php-linter:
