--- a/.github/workflows/accounts-qc-php.yml
+++ b/.github/workflows/accounts-qc-php.yml
@@ -2,8 +2,8 @@ name: Accounts Quality Control PHP
 
 on:
   pull_request:
-    paths-ignore:
-      - 'tests/**'
+    paths:
+      - 'src/**'
 
 jobs:
   php-linter:
